# chill_pm

./: Cargo.toml  README.md  test.sh  types.ts
.othentic/: state.output.json
src/: cli.rs  constants.rs  error.rs  handlers.rs  main.rs  price.rs  pricedata.rs  processors.rs  types.rs
src/agent/: mod.rs  openai.rs  othentic.rs  yieldfarm.rs
src/executor/: binance.rs  eisen.rs  error.rs  mod.rs  multi_executor.rs
src/feed/: binance.rs  mod.rs  service.rs
src/portfolio/: binance.rs  eisen.rs  mod.rs
src/utils/: format.rs  mod.rs  parser.rs  price.rs  price_data.rs  sign.rs
src/yields/: aave.rs  eigen_layer.rs  lido.rs  mod.rs
