[package]
name = "chill_pm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.19"
secp256k1 = "0.30"
actix-web = "4.9.0"
ethabi = "18.0.0"
ethers = "2.0"
alloy = { version = "0.11", features = ["full"] }
alloy-sol-types = "0.8"
eyre = "0.6"
rust_decimal = "1.31.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
rand = "0.8"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
strum = "0.27.1"
strum_macros = "0.27.1"
ta = "0.5"
statrs = "0.18.0"
chrono = "0.4.36"
anyhow = "1.0.89"
talib = "0.1.2"
bigint = "4.4.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
thiserror = "1.0.38"
positions = "0.2.1"
warp = "0.3.7"
log = "0.4.20"
env_logger = "0.11.5"
# async
tokio = { version = "1.39.0", features = ["full"] }
async-trait = "0.1.75"
tower = { version = "0.4.13", default-features = false }
tower-make = "0.3.0"
tower-service = "0.3.2"
futures = "0.3.25"
futures-util = "0.3.25"
pin-project-lite = "0.2.9"
async-stream = "0.3.3"
tokio-stream = "0.1.11"
tokio-tungstenite = "0.26.1"
tokio-tower = "0.6.0"
hyper = "1.6.0"
hyper-util = { version = "0.1.5", features = ["full"] }
http = "1.2.0"
time = "0.3.9"
axum = "0.7.4"

itertools = { version = "0.14", features = [
    "use_std",
], default-features = false }
dotenv = "0.15.0"
clap = { version = "4.5.21", features = ["derive"] }
async-openai = "0.27.2"

[dev-dependencies]
tempfile = "3.5"
